--- a/forget_password.html
+++ b/forget_password.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Login</title>
+        <title>Forget password</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -27,29 +27,17 @@
             <h2>soloblogt</h2>
             <div class="container">
                 <form>
-                    <h3>Login</h3>
+                    <h3>Forget password</h3>
                     <div class="mb-3">
-                      <label for="" class="form-label">Username</label>
-                      <input type="email" class="form-control">
+                      <label for="exampleInputEmail1" class="form-label">Username</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
-                      <label for="" class="form-label">Password</label>
-                      <input type="password" class="form-control">
+                      <label for="exampleInputPassword1" class="form-label">Email</label>
+                      <input type="email" class="form-control" id="exampleInputPassword1">
                     </div>
-                    <div class="mb-3 form-check">
-                      <input type="checkbox" class="form-check-input">
-                      <label class="form-check-label" for="exampleCheck1">Remember me</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Log in</button>
-                    <div class="container_swap">
-                        <div class="div_left">
-                            <a href="signup.html">Sign up</a>
-                        </div>
-                        <div class="div_right">
-                            <a href="forget_password.html">Forgot password</a>
-                        </div>
-                    </div>
-                </form>
+                    <button type="submit" class="btn btn-primary">Send request</button>
+                  </form>
             </div>
         </main>
         <footer>
