--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
         <main>
             <h2>soloblogt</h2>
             <div class="container">
-                <form>
+                <form action="./profile.html">
                     <h3>Login</h3>
                     <div class="mb-3">
                       <label for="" class="form-label">Username</label>
