--- a/forget_password.html
+++ b/forget_password.html
@@ -26,7 +26,7 @@
         <main>
             <h2>soloblogt</h2>
             <div class="container">
-                <form>
+                <form action="./login.html">
                     <h3>Forget password</h3>
                     <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label">Username</label>
