changes to old file

--- a/write.html
+++ b/write.html
@@ -75,23 +75,16 @@
     </div>
     <section class="text-gray-600 w-full flex flex-col px-3">
         <div class="w-full flex justify-start mt-16 mb-8 mx-8 px-4 ">
-<<<<<<< HEAD
-            <button
-                class="mr-4 bg-transparent hover:bg-pblue-dark text-pblue font-semibold hover:text-white py-2 px-4 border border-pblue rounded-lg">
-                <a href="./moreof.html" class="">Add cover image </a>
-            </button>
-=======
             <input type="file" id="cover-image" class="hidden"  onchange="showImage(this)">
             <label for="cover-image" class="mr-4 bg-transparent hover:bg-pblue-dark text-pblue font-semibold hover:text-white py-2 px-4 border border-pblue rounded-lg">
               Add cover image
             </label>          
         </div>
-        <div id="image-container" class="h-10 mb-8 mx-8 px-4 ">
+        <div id="image-container" class="h-96 overflow-hidden mb-8 mx-8 px-4 ">
           <img id="selected-image" src="" alt="Selected Image" class="hidden w-full">
           <button id="delete-image" class="bg-transparent hover:bg-pred text-red-500 font-semibold hidden py-2 px-4 border border-red-500 rounded-lg" onclick="deleteImage()">
             Delete Image
           </button>
->>>>>>> origin/hotfix
         </div>
         <form  class="mx-8 px-4">
             <div class="mb-8">
@@ -128,9 +121,6 @@
       <div class="uppercase pb-6">&copy; soloblogt.com</div>
   </div>
   </footer>
-<<<<<<< HEAD
-=======
   <script src="./all.js"></script>
   </body>
->>>>>>> origin/hotfix
   <html>
